# OptiTrade

./: .gitignore  404.html  CMakeLists.txt  Cargo.toml  README.md  index.html  mkdocs.yml  search.html  setup.sh  sitemap.xml
.github/workflows/: cmake-single-platform.yml  deploy-docs.yml
backend/: Cargo.toml  config.toml
backend/backtesting/: Cargo.toml
backend/backtesting/src/: backtest_engine.rs  kafka_producer.rs  main.rs  strategy_runner.rs
backend/execution_agent/: Cargo.toml
backend/execution_agent/src/: kafka_consumer.rs  main.rs  order_executor.rs  risk_checker.rs
backend/infra/messaging/db/: docker-compose.yml
backend/infra/messaging/kafka/: docker-compose.yml
backend/market_data/: Cargo.toml
backend/market_data/src/: alpaca_api.rs  config.rs  ib_api.rs  kafka_producer.rs  lib.rs  main.rs
backend/src/: lib.rs  market_data_generated.rs  schema.fbs
backend/src/shared/: config.rs  data_loader.rs  kafka_producer.rs  mmap_buffer.rs  mod.rs
backend/storage_agent/: Cargo.toml
backend/storage_agent/src/: db_writer.rs  kafka_consumer.rs  main.rs
getting_started/: index.html
include/market_data/: market_data_handler.h  order_book.h
include/pricing/: options_pricing.h
infra/deployment/k8s-configs/: market-data.yml
infra/deployment/monitoring/: prometheus.yml
infra/messaging/: docker-compose.yml
installation/: index.html
search/: search_index.json
site/: 404.html  search.html
src/: main.cpp
src/market_data/: market_data_handler.cpp  order_book.cpp
src/pricing/: options_pricing.cpp
