[workspace]
resolver = "2"
members = [
    "backend",
    "backend/market_data",
    "backend/storage_agent",
    "backend/backtesting",
    "backend/execution_agent",
    "backend/analytics",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
postgres-types = { version = "0.2", features = ["derive"] }
tokio-tungstenite = { version = "*", features = ["tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
rdkafka = { version = "0.29", features = ["tokio"] }
futures-util = "0.3"
flatbuffers = "25.1.24"
url = "2.3"
memmap2 = "0.9"
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json"] }
toml = "0.7"
chrono = { version = "0.4", features = ["serde"] }
