[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "backend"
path = "src/lib.rs"

[[bin]]
name = "market_data"
path = "market_data/src/main.rs"

[[bin]]
name = "storage_agent"
path = "storage_agent/src/main.rs"

[[bin]]
name = "backtesting"
path = "backtesting/src/main.rs"

[[bin]]
name = "execution_agent"
path = "execution_agent/src/main.rs"

[[bin]]
name = "analytics"
path = "analytics/src/main.rs"

[dependencies]
tokio = { workspace = true }
tokio-postgres = { workspace = true }
postgres-types = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rdkafka = { workspace = true }
futures-util = { workspace = true }
flatbuffers = { workspace = true }
url = { workspace = true }
memmap2 = { workspace = true }
lazy_static = { workspace = true }
