[package]
name = "market_data"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
postgres-types = { version = "0.2", features = ["derive"] }
tokio-tungstenite = { version = "*", features = ["tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
rdkafka = { version = "0.29", features = ["tokio"] }
futures-util = "0.3"
