[package]
name = "market_data"
version = "0.1.0"
edition = "2021"

[dependencies]
backend = { path = ".." }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
postgres-types = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rdkafka = { workspace = true }
futures-util = { workspace = true }
flatbuffers = { workspace = true }
url = { workspace = true }
memmap2 = { workspace = true }
lazy_static = { workspace = true }
